[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
log = "0.4.27"
fast-down = { version = "3.4.0", path = "../core/crates/fast-down" }
reqwest = { version = "0.12.23", features = [
  "brotli",
  "deflate",
  "gzip",
  "zstd",
  "system-proxy",
  "socks",
  "http2",
  "rustls-tls",
], default-features = false }
url = "2.5.7"
tokio = { version = "1.47.1", default-features = false }
sanitize-filename = "0.6.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
serde = "1.0.219"
actix-files = "0.6.6"
kanal = "0.1.1"
aria2-gid = "0.1.0"
inherit-config = "0.1.1"
inherit-config-derive = "0.1.1"
spin = { version = "0.10.0", features = [
  "spin_mutex",
], default-features = false }
